--- a/spring01/pom.xml
+++ b/spring01/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.demo</groupId>
+	<groupId>com.bo.demo</groupId>
 	<artifactId>spring01</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
